Travis: Test package installation after building.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,13 @@ services:
 
 before_install:
   - docker pull karljohns0n/rpmbuild:8
-  - docker pull centos:"${version}"
+  - docker pull karljohns0n/rpmbuild:"${version}"
 
 script:
   - pkg_name=aeris-release
+  - pkg_arch=noarch
   - pkg_version=$(grep "Version:" SPECS/${pkg_name}.spec|awk '{print $2}' )
   - pkg_release=$(grep "Release:" SPECS/${pkg_name}.spec|awk '{print $2}'| tr -d "%{?dist}")
-  - pkg_arch=noarch
   - container_id=$(cat /dev/urandom | env LC_CTYPE=C tr -dc 'a-zA-Z0-9' | fold -w 20 | head -n 1)
 
   # Build package
@@ -27,4 +27,11 @@ script:
   - docker exec "${container_id}" mock --old-chroot -r aeris-"${version}"-x86_64 --spec=/tmp/"${pkg_name}"/SPECS/"${pkg_name}".spec --sources=/tmp/"${pkg_name}"/SOURCES --resultdir=/tmp/"${pkg_name}"/SRPMS --buildsrpm
   - docker exec "${container_id}" mock --old-chroot --clean -D "dist .el${version}" -r aeris-"${version}"-x86_64 --resultdir=/tmp/"${pkg_name}"/RPMS --rebuild /tmp/"${pkg_name}"/SRPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}".src.rpm
   - docker exec "${container_id}" rpm -q -l -p /tmp/"${pkg_name}"/RPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}"."${pkg_arch}".rpm
+  - docker rm -f "${container_id}"
+
+  # Test package
+  - docker run --name "${container_id}" --detach --privileged --volume="${PWD}":/tmp/"${pkg_name}" karljohns0n/rpmbuild:"${version}"
+  - docker exec "${container_id}" yum install -y /tmp/"${pkg_name}"/RPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}".noarch.rpm
+  - docker exec "${container_id}" yum --disablerepo="*" --enablerepo="aeris" list available
+  - docker exec "${container_id}" yum --disablerepo="*" --enablerepo="aeris-testing" list available
   - docker rm -f "${container_id}"
