--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ script:
   - container_id=$(cat /dev/urandom | env LC_CTYPE=C tr -dc 'a-zA-Z0-9' | fold -w 20 | head -n 1)
 
   # Build package
-  - docker run --name "${container_id}" --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/tmp/"${pkg_name}" karljohns0n/rpmbuild:8
+  - docker run --name "${container_id}" --detach --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/tmp/"${pkg_name}" karljohns0n/rpmbuild:8
   - docker exec "${container_id}" mkdir -p /tmp/"${pkg_name}"/{BUILD,RPMS,SPECS,SOURCES,SRPMS}
   - docker exec "${container_id}" mock --old-chroot -r aeris-"${version}"-x86_64 --spec=/tmp/"${pkg_name}"/SPECS/"${pkg_name}".spec --sources=/tmp/"${pkg_name}"/SOURCES --resultdir=/tmp/"${pkg_name}"/SRPMS --buildsrpm
   - docker exec "${container_id}" mock --old-chroot --clean -D "dist .el${version}" -r aeris-"${version}"-x86_64 --resultdir=/tmp/"${pkg_name}"/RPMS --rebuild /tmp/"${pkg_name}"/SRPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}".src.rpm
@@ -30,7 +30,7 @@ script:
   - docker rm -f "${container_id}"
 
   # Test package
-  - docker run --name "${container_id}" --detach --privileged --volume="${PWD}":/tmp/"${pkg_name}" karljohns0n/rpmbuild:"${version}"
+  - docker run --name "${container_id}" --detach --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/tmp/"${pkg_name}" karljohns0n/rpmbuild:"${version}"
   - docker exec "${container_id}" yum install -y /tmp/"${pkg_name}"/RPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}".noarch.rpm
   - docker exec "${container_id}" yum --disablerepo="*" --enablerepo="aeris" list available
   - docker exec "${container_id}" yum --disablerepo="*" --enablerepo="aeris-testing" list available
