--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 ---
+language: shell
+
 env:
   - distribution: centos
     version: 6
@@ -31,7 +33,7 @@ script:
 
   # Test package
   - docker run --name "${container_id}" --detach --privileged --volume=/sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/tmp/"${pkg_name}" karljohns0n/rpmbuild:"${version}"
-  - docker exec "${container_id}" yum install -y /tmp/"${pkg_name}"/RPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}".noarch.rpm
+  - docker exec "${container_id}" yum install -y /tmp/"${pkg_name}"/RPMS/"${pkg_name}"-"${pkg_version}"-"${pkg_release}".el"${version}"."${pkg_arch}".rpm
   - docker exec "${container_id}" yum --disablerepo="*" --enablerepo="aeris" list available
   - docker exec "${container_id}" yum --disablerepo="*" --enablerepo="aeris-testing" list available
   - docker rm -f "${container_id}"
